--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@ionic-native/browser-tab": "^5.34.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/insomnia": "^5.34.0",
+    "@ionic-native/safari-view-controller": "^5.34.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/lab": "^3.2.7",
     "cordova-plugin-android-permissions": "^1.1.0",
+    "cordova-plugin-androidx": "3.0.0",
+    "cordova-plugin-androidx-adapter": "1.1.3",
     "cordova-plugin-prevent-screenshot": "^1.0.3",
+    "cordova-plugin-safariviewcontroller": "2.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -88,7 +92,10 @@
         "ANDROID_HOST": "test",
         "ANDROID_PATHPREFIX": "/cordova/io.ionic.starter/callback"
       },
-      "cordova-plugin-insomnia": {}
+      "cordova-plugin-insomnia": {},
+      "cordova-plugin-safariviewcontroller": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
       "android"
